--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
         <title>Codex Apocalyptica</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-            <link rel="stylesheet" href="/theme/css/normalize.css">
+            <link rel="stylesheet" href="./theme/css/normalize.css">
         <link href='//fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
         <link href='//fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="/theme/css/font-awesome.min.css">
-        <link rel="stylesheet" href="/theme/css/main.css">
+        <link rel="stylesheet" href="./theme/css/font-awesome.min.css">
+        <link rel="stylesheet" href="./theme/css/main.css">
 
-    <link rel="stylesheet" href="/theme/css/blog.css">
-    <link rel="stylesheet" href="/theme/css/github.css">
+    <link rel="stylesheet" href="./theme/css/blog.css">
+    <link rel="stylesheet" href="./theme/css/github.css">
         <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Codex Apocalyptica Atom Feed" />
-        <script src="/theme/js/vendor/modernizr-2.6.2.min.js"></script>
+        <script src="./theme/js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -28,7 +28,7 @@
         <div id="wrapper">
 <header id="sidebar" class="side-shadow">
     <hgroup id="site-header">
-        <a id="site-title" href=""><h1><i class="icon-coffee"></i> Codex Apocalyptica</h1></a>
+        <a id="site-title" href="."><h1><i class="icon-coffee"></i> Codex Apocalyptica</h1></a>
         <p id="site-desc"></p>
     </hgroup>
     <nav>
@@ -47,6 +47,6 @@
     </div>
         </div>
 
-        <script src="/theme/js/main.js"></script>
+        <script src="./theme/js/main.js"></script>
     </body>
 </html>
